automatically backed up by learn

--- a/css/gems.css
+++ b/css/gems.css
@@ -1,6 +1,6 @@
 /* Select the image with a id of ruby */
 
-/*selector for ruby goes here */  {
+#ruby{
   position: absolute;
   z-index: 1;
   top: 315px;
@@ -9,16 +9,16 @@
 
 /* Select the image with class of emerald */
 
-/*selector for emerald goes here */  {
+.emerald{
   position: absolute;
   z-index: 2;
   top: 350px;
   left: 369px;
 }
 
-/* Select the image inside the element with an id of sand (using its descendant relationship) */
+.yellow_diamond
 
-/*selector for sapphire goes here */{
+{
   position: absolute;
   z-index: 5;
   top: 315px;
@@ -27,7 +27,7 @@
 
 /* Select the image with the class "yellow_diamond" */
 
-/*selector for yellow diamond goes here */ {
+#diamond{
   position: absolute;
   z-index: 4;
   top: 325px;
@@ -35,7 +35,7 @@
 }
 
 /* Select the image that has ad id of diamond */
-/*selector for diamond goes here */ {
+#sand{
   position: absolute;
   z-index: 3;
   top: 300px;
